--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "twilio": "^5.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
