chore: update dependencies in package.json and lock file

--- a/sms-service/package.json
+++ b/sms-service/package.json
@@ -5,6 +5,7 @@
     "start": "vercel dev"
   },
   "dependencies": {
-    "twilio": "^4.23.0"
+    "dotenv": "^16.5.0",
+    "twilio": "^4.0.0"
   }
 }
